--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,11 +7,12 @@ extensions =
 parts =
     instance
     test
-    code-analysis
-    createcoverage
+#    code-analysis
+#    createcoverage
     releaser
     i18ndude
     omelette
+    test
     robot
 develop = .
 
@@ -67,4 +68,102 @@ eggs = zest.releaser
 recipe = zc.recipe.egg
 eggs = i18ndude
 
+
 [versions]
+# Moduls infraestructura
+
+# Fixed on 2/Nov/17 - To check HTTPS connections on PYPI.
+mr.developer = 1.38
+setuptools = 36.6.0
+zc.buildout = 2.11.3
+
+# Fixed on 15/Nov/17 - For Plone 4 use 1.x
+Products.windowZ = 1.5
+
+ipython = 5.3.0
+elasticsearch = 5.4.0
+plone.app.workflow = 2.2.6
+
+# Added to solve import ZODB 5
+node.ext.zodb = 1.0.1
+node = 0.9.18.1
+
+# MAX versions fixed
+mrs.max = 5.24
+maxclient = 5.1.2
+hubclient = 1.1
+
+newrelic = 2.18.1.15
+plone.app.locales = 4.3.9
+supervisor = 3.2.1
+collective.recaptcha = 2.1.0
+
+# Temporal
+pyScss = 1.2.1
+BeautifulSoup4 = 4.4.1
+bleach = 1.4
+html5lib = 0.999
+python-ldap = 2.4.25
+pyldap = 2.4.37
+
+# SERVEIS TIC
+eea.facetednavigation = 8.8
+eea.jquery = 8.7
+eea.faceted.vocabularies = 5.3
+
+# ALUMNI
+wstools = 0.4.3
+
+# RECTORAT
+plone.formwidget.multifile = 1.1
+
+# Pin several products
+wildcard.foldercontents = 1.2.7
+collective.indexing = 2.0b1
+anz.casclient = 1.1.1
+quintagroup.seoptimizer = 99.9
+Products.PloneFormGen = 1.7.17
+i18ndude = 4.3
+
+# Add plone.app.contenttypes
+plone.app.multilingual = 2.0.5-upcnet
+archetypes.multilingual = 2.0
+
+# Needed for p.a.c and p.a.e
+plone.app.jquery = 1.8.3
+
+
+
+# robot tests
+plone.app.robotframework = 1.1.1
+robotframework = 2.8.4
+robotframework-selenium2library = 1.5.0
+robotsuite = 1.6.1
+selenium = 2.43.0
+mock = 1.0.1
+zope.testrunner = 4.1.1
+pep8 = 1.5.7
+Babel = 1.3
+robotframework-selenium2screenshots = 0.4.0
+sphinxcontrib-robotframework = 0.4.3
+robotframework-debuglibrary = 0.3
+sphinx-rtd-theme = 0.1.5
+Pygments = 1.6
+six = 1.10.0
+profilehooks = 1.9.0
+transaction = 1.6.0
+
+# === mixin js , SI SE CANVIA VERSION PAQUETE HAY QUE ACTUALIZAR EL FICHERO JS EN GENWEB.DIST.MIXIN ===
+collective.polls = 1.6.2.upcnet
+plone.formwidget.recaptcha = 2.0a.3
+plone.formwidget.recurrence = 1.2.6
+collective.z3cform.datagridfield = 1.1
+plone.app.jquerytools = 1.7.0
+plone.app.search = 1.1.8
+plone.app.discussion = 2.2.15
+plone.app.event = 1.1.5
+plone.formwidget.autocomplete = 1.2.8
+plone.formwidget.contenttree = 1.0.9
+Products.Collage = 1.4.0
+jarn.jsi18n = 1.1
+
