--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,8 +7,8 @@ extensions =
 parts =
     instance
     test
-#    code-analysis
-#    createcoverage
+    code-analysis
+    createcoverage
     releaser
     i18ndude
     omelette
@@ -16,6 +16,7 @@ parts =
     robot
 develop = .
 
+find-links = http://pypi.upc.edu/links
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -23,13 +24,18 @@ user = admin:admin
 http-address = 8080
 environment-vars =
     zope_i18n_compile_mo_files true
+
+# Added required base eggs to execute tests
 eggs =
     Plone
+    plone.app.multilingual
+    plone.app.contenttypes
+    genweb.upc
     genweb.organs [test]
 
 
 [code-analysis]
-recipe = plone.recipe.codeanalysis[recommended]
+recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src/genweb.organs
 flake8-exclude = bootstrap.py,bootstrap-buildout.py,docs,*.egg.,omelette
 flake8-max-complexity = 15
@@ -70,9 +76,6 @@ eggs = i18ndude
 
 
 [versions]
-# Moduls infraestructura
-
-# Fixed on 2/Nov/17 - To check HTTPS connections on PYPI.
 mr.developer = 1.38
 setuptools = 36.6.0
 zc.buildout = 2.11.3
@@ -167,3 +170,9 @@ plone.formwidget.contenttree = 1.0.9
 Products.Collage = 1.4.0
 jarn.jsi18n = 1.1
 
+# Coverage required and base core requirements
+coverage = 3.7
+plone.app.contenttypes = 1.1b5
+Products.LDAPUserFolder = 2.27
+
+plone.protect = 3.0.12
