--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,37 +20,19 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      # - restore_cache:
-      #     keys:
-      #     - v1-dependencies-{{ checksum "requirements.txt" }}
-      #     # fallback to using the latest cache if no exact match is found
-      #     - v1-dependencies-
+      - run:
+          name: Install system dependencies
+          command: |
+            sudo apt-get install libsasl2-dev python-dev libldap2-dev libssl-dev
 
       - run:
-          name: install dependencies
+          name: Execute buildout
           command: |
             python bootstrap.py
             bin/buildout -N
-      #      bin/test -t genweb.organs
 
-      # - save_cache:
-      #     paths:
-      #       - ./venv
-      #     key: v1-dependencies-{{ checksum "requirements.txt" }}
-
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
-      # - run:
-      #     name: run tests
-      #     command: |
-      #       . venv/bin/activate
-      #       python manage.py test
-
-      # - store_artifacts:
-      #     path: test-reports
-      #     destination: test-reports
+      - run:
+          name: Run Python tests
+          command: |
+            bin/test -t genweb.organs
 
