added robot tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,6 @@ parts =
     releaser
     i18ndude
     omelette
-    test
     robot
 develop = .
 
@@ -28,10 +27,11 @@ environment-vars =
 # Added required base eggs to execute tests
 eggs =
     Plone
+    Pillow
     plone.app.multilingual
     plone.app.contenttypes
     genweb.upc
-    genweb.organs [test]
+    genweb.organs
 
 
 [code-analysis]
