--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
           name: Install system dependencies
           command: |
             sudo apt-get install libsasl2-dev python-dev libldap2-dev libssl-dev
+            sudo pip install unittest2
 
       - run:
           name: Execute buildout
