--- a/buildout.cfg
+++ b/buildout.cfg
@@ -155,6 +155,7 @@ Pygments = 1.6
 six = 1.10.0
 profilehooks = 1.9.0
 transaction = 1.6.0
+plone.testing = 5.0.0
 
 # === mixin js , SI SE CANVIA VERSION PAQUETE HAY QUE ACTUALIZAR EL FICHERO JS EN GENWEB.DIST.MIXIN ===
 collective.polls = 1.6.2.upcnet
@@ -176,3 +177,4 @@ plone.app.contenttypes = 1.1b5
 Products.LDAPUserFolder = 2.27
 
 plone.protect = 3.0.12
+
