added translations and change mail receptor in travis temp checks

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ addons:
 notifications:
   email:
     recipients:
-      - ploneteam@upcnet.es
-      - {author}
+      - roberto.diaz@upcnet.es
+      - Roberto Diaz
     on_success: change
     on_failure: change
 
