trying to skip eggs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,10 @@ jobs:
 
     working_directory: ~/repo
 
+    dependencies:
+        cache_directories:
+          - "*/eggs/*"
+
     steps:
       - checkout
 
