--- a/buildout.cfg
+++ b/buildout.cfg
@@ -55,6 +55,9 @@ eggs = ${instance:eggs}
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${instance:eggs}
+       plone.app.testing
+       plone.app.testing[robot]>=4.2.2
+       plone.app.robotframework[debug]
 defaults = ['-s', 'genweb.organs', '--auto-color', '--auto-progress']
 
 
