--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ sudo: false
 python:
     - 2.7
 
-before_script:
+before_install:
   - sudo apt-get install --yes libsasl2-dev python-dev libldap2-dev libssl-dev
+
+before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - firefox -v
 
 install:
     - pip install setuptools zc.buildout
