test fixing egg for tests :)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -85,6 +85,7 @@ zc.buildout = 2.11.3
 
 # Fixed on 15/Nov/17 - For Plone 4 use 1.x
 Products.windowZ = 1.5
+zodbpickle = 0.7.0
 
 ipython = 5.3.0
 elasticsearch = 5.4.0
@@ -159,6 +160,7 @@ six = 1.10.0
 profilehooks = 1.9.0
 transaction = 1.6.0
 plone.testing = 5.0.0
+
 
 # === mixin js , SI SE CANVIA VERSION PAQUETE HAY QUE ACTUALIZAR EL FICHERO JS EN GENWEB.DIST.MIXIN ===
 collective.polls = 1.6.2.upcnet
