--- a/buildout.cfg
+++ b/buildout.cfg
@@ -80,8 +80,8 @@ eggs = i18ndude
 
 [versions]
 mr.developer = 1.38
-setuptools = 36.6.0
-zc.buildout = 2.11.3
+setuptools =
+zc.buildout =
 
 # Fixed on 15/Nov/17 - For Plone 4 use 1.x
 Products.windowZ = 1.5
@@ -182,4 +182,17 @@ plone.app.contenttypes = 1.1b5
 Products.LDAPUserFolder = 2.27
 
 plone.protect = 3.0.12
+
+
+plone.recipe.zope2instance = 4.3
+Zope2 = 2.13.28
+zope.pagetemplate = 4.0.2
+zope.interface = 3.8
+zope.browserresource = 3.11
+zope.browserpage = 4.0
+zExceptions = 3.4
+transaction = 2.4
+DocumentTemplate = 2.13.4
+
+
 
