--- a/buildout.cfg
+++ b/buildout.cfg
@@ -83,116 +83,418 @@ mr.developer = 1.38
 setuptools =
 zc.buildout =
 
-# Fixed on 15/Nov/17 - For Plone 4 use 1.x
-Products.windowZ = 1.5
-zodbpickle = 0.7.0
 
-ipython = 5.3.0
-elasticsearch = 5.4.0
-plone.app.workflow = 2.2.6
-
-# Added to solve import ZODB 5
-node.ext.zodb = 1.0.1
-node = 0.9.18.1
-
-# MAX versions fixed
-mrs.max = 5.24
-maxclient = 5.1.2
-hubclient = 1.1
-
-newrelic = 2.18.1.15
-plone.app.locales = 4.3.9
-supervisor = 3.2.1
-collective.recaptcha = 2.1.0
-
-# Temporal
-pyScss = 1.2.1
-BeautifulSoup4 = 4.4.1
-bleach = 1.4
-html5lib = 0.999
-python-ldap = 2.4.25
-pyldap = 2.4.37
-
-# SERVEIS TIC
-eea.facetednavigation = 8.8
-eea.jquery = 8.7
-eea.faceted.vocabularies = 5.3
-
-# ALUMNI
-wstools = 0.4.3
-
-# RECTORAT
-plone.formwidget.multifile = 1.1
-
-# Pin several products
-wildcard.foldercontents = 1.2.7
-collective.indexing = 2.0b1
-anz.casclient = 1.1.1
-quintagroup.seoptimizer = 99.9
-Products.PloneFormGen = 1.7.17
-i18ndude = 4.3
-
-# Add plone.app.contenttypes
-plone.app.multilingual = 2.0.5-upcnet
-archetypes.multilingual = 2.0
-
-# Needed for p.a.c and p.a.e
-plone.app.jquery = 1.8.3
-
-
-
-# robot tests
-plone.app.robotframework = 1.1.1
-robotframework = 2.8.4
-robotframework-selenium2library = 1.5.0
-robotsuite = 1.6.1
-selenium = 2.43.0
-mock = 1.0.1
-zope.testrunner = 4.1.1
-pep8 = 1.5.7
-Babel = 1.3
-robotframework-selenium2screenshots = 0.4.0
-sphinxcontrib-robotframework = 0.4.3
-robotframework-debuglibrary = 0.3
-sphinx-rtd-theme = 0.1.5
-Pygments = 1.6
-six = 1.10.0
-profilehooks = 1.9.0
-transaction = 1.6.0
-plone.testing = 5.0.0
-
-
-# === mixin js , SI SE CANVIA VERSION PAQUETE HAY QUE ACTUALIZAR EL FICHERO JS EN GENWEB.DIST.MIXIN ===
-collective.polls = 1.6.2.upcnet
-plone.formwidget.recaptcha = 2.0a.3
-plone.formwidget.recurrence = 1.2.6
-collective.z3cform.datagridfield = 1.1
-plone.app.jquerytools = 1.7.0
-plone.app.search = 1.1.8
-plone.app.discussion = 2.2.15
-plone.app.event = 1.1.5
-plone.formwidget.autocomplete = 1.2.8
-plone.formwidget.contenttree = 1.0.9
-Products.Collage = 1.4.0
-jarn.jsi18n = 1.1
-
-# Coverage required and base core requirements
-coverage = 3.7
-plone.app.contenttypes = 1.1b5
+Zope2 = 2.13.23
+Plone = 4.3.7
+genweb.core = 4.8.46
+genweb.theme = 2.8
+genweb.cdn = 1.60
+genweb.js = 1.15
+genweb.controlpanel = 1.8
+genweb.portlets = 1.2.13
+genweb.upc = 2.52
+genweb.stack = 2.1
+genweb.banners = 1.12
+genweb.logosfooter = 1.5
+genweb.packets = 2.17
+upcnet.cas = 1.6
+upc.genweb.soa = 1.5
+genweb.simpleforum = 1.1
+genweb.cleantheme = 0.8
+upcnet.stats = 1.2
+genweb.searchpage = 0.2
+genweb.smartportlet = 1.1
+upc.genweb.newsletter = 2.9
+rectorat.newsletter = 1.6
+genweb.rectorat = 1.19
+genweb.serveistic = 1.6.10
+genweb.ens = 1.7.7
+genweb.alumni = 0.7
+genweb.alumniwsdllogin = 0.7
+genweb.upcnet = 0.6
+genweb.btec = 0.10
+genweb.jsonify = 1.10
+collective.jsonify = 1.3
+genweb.organs = 0.31
+Products.PloneLDAP = 1.2
+Products.PloneHotfix20160419 = 1.0
+Products.PloneHotfix20160830 = 1.3
+Products.PloneHotfix20161129 = 1.2
+Products.PloneHotfix20170117 = 1.0
+Products.PloneHotfix20171128 = 1.0
+plone.recipe.zope2instance = 4.4.0
+ZODB3 = 3.10.5
+zc.recipe.egg = 1.3.2
+mailinglogger = 3.7.0
+zc.buildout = 2.11.3
 Products.LDAPUserFolder = 2.27
+Products.LDAPMultiPlugins = 1.14
+Products.PlonePAS = 4.1.5
+selenium = 2.43.0
+collective.dexteritytextindexer = 2.2.1
+Products.Marshall = 2.1.4
+zope.container = 3.11.2
+plone.app.transmogrifier = 1.4.1
+lxml = 2.3.6
+Products.CMFCore = 2.2.9
+plone.api = 1.8.4
+collective.jsonmigrator = 1.0.1
+transmogrify.dexterity = 1.6.3
+five.grok = 1.3.2
+z3c.saconfig = 0.14
+SOAPpy = 0.12.22
+pyOpenSSL = 18.0.0
+oauth2client = 4.1.2
+google_api_python_client = 1.7.3
+simplejson = 2.5.2
+eea.facetednavigation = 8.8
+plone.formwidget.multifile = 1.1
+plone.app.dexterity = 2.0.16
+plone.app.referenceablebehavior = 0.7.0
+plone.formwidget.querystring = 1.1.10
+z3c.jbot = 0.7.2
+Products.CMFPlone = 4.3.7
+z3c.suds = 1.0
+suds = 0.4
+anz.casclient = 1.1.1
+pyquery = 1.4.0
+requests = 2.19.1
+plone.formwidget.recaptcha = 2.0a3
+collective.recaptcha = 2.1.0
+pfg.drafts = 1.1.2
+collective.collage.ploneformgen = 1.0a1
+collective.pfg.dexterity = 0.10.1
+collective.polls = 1.6.2.upcnet
+Products.windowZ = 1.5
+Products.Collage = 1.4.0
+Products.PloneFormGen = 1.7.17
+#plone.app.multilingual = 2.0.5_upcnet
 
-plone.protect = 3.0.12
-
-
-plone.recipe.zope2instance = 4.3
-Zope2 = 2.13.28
-zope.pagetemplate = 4.0.2
-zope.interface = 3.8
-zope.browserresource = 3.11
-zope.browserpage = 4.0
-zExceptions = 3.4
-transaction = 2.4
-DocumentTemplate = 2.13.4
-
-
-
+collective.z3cform.datagridfield = 1.1
+plone.app.registry = 1.2.4
+pyScss = 1.2.1
+plone.resource = 1.0.4
+plone.restapi = 3.1.0
+ipdb = 0.11
+PyYAML = 5.1
+elasticsearch = 5.4.0
+souper.plone = 1.2.1
+quintagroup.seoptimizer = 99.9
+jarn.jsi18n = 1.1
+wildcard.foldercontents = 1.2.7
+collective.tinymcetemplates = 1.0b4
+plone.app.workflowmanager = 1.1.0
+plone.namedfile = 2.0.9
+plone.app.lockingbehavior = 1.0.1
+plone.app.event = 1.1.5
+plone.app.contenttypes = 1.1b5
+archetypes.schemaextender = 2.1.5
+plone.app.caching = 1.1.10
+wicked = 1.1.12
+plone.app.theming = 1.1.7
+plone.app.openid = 2.0.4
+plone.app.iterate = 2.1.13
+Products.CMFPlacefulWorkflow = 1.5.11
+Products.StandardCacheManagers = 2.13.1
+Products.PythonScripts = 2.13.2
+Products.MIMETools = 2.13.0
+Products.MailHost = 2.13.2
+Products.ExternalMethod = 2.13.1
+Products.BTreeFolder2 = 2.13.3
+zope.viewlet = 3.7.2
+zope.traversing = 3.13.2
+zope.testing = 3.9.7
+zope.testbrowser = 3.11.1
+zope.tal = 4.3.0
+zope.structuredtext = 3.5.1
+zope.size = 3.4.1
+zope.site = 3.9.2
+zope.sequencesort = 3.4.0
+zope.sendmail = 3.7.5
+zope.security = 3.7.4
+zope.schema = 4.2.2
+zope.publisher = 3.12.6
+zope.ptresource = 3.9.0
+zope.proxy = 3.6.1
+zope.processlifetime = 1.0
+zope.pagetemplate = 3.6.3
+zope.location = 3.9.1
+zope.lifecycleevent = 3.6.2
+zope.interface = 3.6.7
+zope.i18nmessageid = 3.5.3
+zope.i18n = 3.7.4
+zope.exceptions = 3.6.2
+zope.event = 3.5.2
+zope.deferredimport = 3.5.3
+zope.contenttype = 3.5.5
+zope.contentprovider = 3.7.2
+zope.configuration = 3.7.4
+zope.component = 3.9.5
+zope.browserresource = 3.10.3
+zope.browserpage = 3.12.2
+zope.browsermenu = 3.9.1
+zope.browser = 1.3
+zLOG = 2.11.2
+zExceptions = 2.13.0
+zdaemon = 2.0.7
+transaction = 1.6.0
+tempstorage = 2.12.2
+pytz = 2013b
+initgroups = 2.13.0
+docutils = 0.12
+ZopeUndo = 2.12.0
+ZConfig = 2.9.3
+RestrictedPython = 3.6.0
+Record = 2.13.0
+Products.ZCTextIndex = 2.13.5
+Products.ZCatalog = 2.13.27
+Products.OFSP = 2.13.2
+Persistence = 2.13.2
+MultiMapping = 2.13.0
+Missing = 2.13.1
+ExtensionClass = 2.13.2
+DocumentTemplate = 2.13.2
+DateTime = 3.0.3
+Acquisition = 2.13.9
+AccessControl = 3.0.11
+zc.lockfile = 1.0.2
+python_ldap = 2.4.25
+dataflake.fakeldap = 2.2
+Products.PluggableAuthService = 1.10.0
+Products.GenericSetup = 1.7.7
+Products.CMFDefault = 2.2.4
+plone.i18n = 2.0.10
+plone.session = 3.5.6
+plone.memoize = 1.1.1
+z3c.form = 3.2.4
+plone.z3cform = 0.8.1
+plone.supermodel = 1.2.6
+plone.indexer = 1.0.3
+plone.dexterity = 2.2.4
+plone.behavior = 1.1
+Products.Archetypes = 1.9.10
+zope.deprecation = 3.4.1
+plone.uuid = 1.0.3
+zope.broken = 3.6.0
+zope.filerepresentation = 3.6.1
+zope.dottedname = 3.4.6
+zope.app.publication = 3.12.0
+Products.ZSQLMethods = 2.13.4
+five.localsitemanager = 2.0.5
+zope.globalrequest = 1.1
+six = 1.10.0
+plone.app.linkintegrity = 1.5.6
+plone.app.uuid = 1.1
+decorator = 3.4.2
+Products.statusmessages = 4.0
+zope.app.container = 3.9.2
+plone.app.textfield = 1.2.6
+zope.annotation = 3.5.0
+grokcore.viewlet = 1.11
+grokcore.view = 2.8
+grokcore.site = 1.6.1
+grokcore.security = 1.6.2
+grokcore.component = 2.5
+grokcore.annotation = 1.3
+martian = 0.14
+zope.hookable = 3.4.1
+zope.sqlalchemy = 1.0
+defusedxml = 0.5.0
+wstools = 0.4.3
+cryptography = 2.2.2
+rsa = 3.4.2
+pyasn1_modules = 0.2.2
+pyasn1 = 0.4.3
+httplib2 = 0.11.3
+uritemplate = 3.0.0
+google_auth_httplib2 = 0.0.3
+google_auth = 1.5.0
+Products.PloneTestCase = 0.9.18
+eea.jquery = 8.7
+collective.js.jqueryui = 1.10.3
+eea.faceted.vocabularies = 5.3
+plone.formwidget.namedfile = 1.0.13
+plone.directives.form = 2.0.1
+plone.directives.dexterity = 1.0.2
+plone.portlets = 2.2
+plone.contentrules = 2.0.4
+plone.autoform = 1.6.1
+plone.app.z3cform = 0.7.7
+plone.app.layout = 2.3.13
+plone.app.content = 2.1.5
+plone.schemaeditor = 1.3.11
+plone.rfc822 = 1.1.1
+collective.z3cform.datetimewidget = 1.2.7
+plone.app.querystring = 1.2.7
+zope.app.locales = 3.6.2
+z3c.autoinclude = 0.3.5
+plonetheme.sunburst = 1.4.7
+plonetheme.classic = 1.3.3
+plone.theme = 2.1.5
+plone.registry = 1.0.2
+plone.protect = 2.0.2
+plone.portlet.static = 2.0.4
+plone.portlet.collection = 2.1.8
+plone.locking = 2.0.8
+plone.intelligenttext = 2.0.3
+plone.fieldsets = 2.0.3
+plone.browserlayer = 2.1.5
+plone.batching = 1.0.5
+plone.app.workflow = 2.2.6
+plone.app.vocabularies = 2.1.20
+plone.app.viewletmanager = 2.0.8
+plone.app.users = 1.2.2
+plone.app.upgrade = 1.3.18
+plone.app.search = 1.1.8
+plone.app.redirector = 1.2.2
+plone.app.portlets = 2.5.4
+plone.app.locales = 4.3.9
+plone.app.jquerytools = 1.7.0
+plone.app.jquery = 1.8.3
+plone.app.i18n = 2.0.3
+plone.app.form = 2.2.6
+plone.app.folder = 1.1.0
+plone.app.discussion = 2.2.15
+plone.app.customerize = 1.2.3
+plone.app.controlpanel = 2.3.9
+plone.app.contentrules = 3.0.8
+plone.app.contentmenu = 2.0.11
+plone.app.contentlisting = 1.0.5
+plone.app.collection = 1.0.13
+plone.app.blob = 1.5.16
+five.customerize = 1.1
+borg.localrole = 3.0.2
+archetypes.referencebrowserwidget = 2.5.4
+archetypes.querywidget = 1.1.2
+Products.TinyMCE = 99.99
+Products.ResourceRegistries = 2.2.11
+Products.PortalTransforms = 2.1.10
+Products.PluginRegistry = 1.3
+Products.PloneLanguageTool = 3.2.7
+Products.PlacelessTranslationService = 2.0.5
+Products.PasswordResetTool = 2.0.18
+Products.MimetypesRegistry = 2.0.8
+Products.ExternalEditor = 1.1.0
+Products.ExtendedPathIndex = 3.1
+Products.DCWorkflow = 2.2.4
+Products.CMFUid = 2.2.1
+Products.CMFQuickInstallerTool = 3.0.12
+Products.CMFFormController = 3.0.5
+Products.CMFEditions = 2.2.16
+Products.CMFDynamicViewFTI = 4.1.3
+Products.CMFDiffTool = 2.1.1
+Products.CMFCalendar = 2.2.3
+Products.CMFActionIcons = 2.1.3
+Products.ATContentTypes = 2.1.16
+Pillow = 2.7.0
+zope.bforest = 1.2
+cssselect = 1.0.3
+certifi = 2018.4.16
+urllib3 = 1.23
+idna = 2.7
+chardet = 3.0.4
+norecaptcha = 0.3.0
+Products.DataGridField = 1.9.6
+five.globalrequest = 1.0
+stripogram = 1.5
+Products.PythonField = 1.1.3
+Products.TemplateFields = 1.2.5
+Products.TALESField = 1.1.3
+archetypes.multilingual = 2.0
+z3c.relationfield = 0.6.3
+plone.formwidget.contenttree = 1.0.9
+plone.caching = 1.0.1
+python_dateutil = 1.5
+z3c.caching = 2.0a1
+PyJWT = 1.6.4
+plone.rest = 1.1.1
+ipython = 5.3.0
+souper = 1.0.2
+collective.monkeypatcher = 1.1.1
+quintagroup.canonicalpath = 0.7
+plone.formwidget.recurrence = 1.2.6
+plone.formwidget.datetime = 1.3.4
+zope.formlib = 4.3.0
+plone.folder = 1.0.7
+plone.event = 1.3.4
+icalendar = 4.0.2
+collective.elephantvocabulary = 0.2.5
+Products.DateRecurringIndex = 2.1
+plone.app.versioningbehavior = 1.2.0
+plone.app.relationfield = 1.2.1
+plone.app.intid = 1.0.5
+z3c.zcmlhook = 1.0b1
+plone.cachepurging = 1.0.9
+repoze.xmliter = 0.5
+plone.resourceeditor = 1.0
+plone.transformchain = 1.0.4
+plone.subrequest = 1.6.9
+roman = 1.4.0
+diazo = 1.0.6
+plone.openid = 2.0.4
+mechanize = 0.2.5
+five.formlib = 1.0.4
+Unidecode = 0.4.1
+plone.keyring = 3.0.1
+zope.ramcache = 1.0
+plone.synchronize = 1.0.1
+plone.alterego = 1.0
+Products.validation = 2.0.1
+zope.datetime = 3.4.1
+zope.error = 3.7.4
+zope.authentication = 3.7.1
+zope.dublincore = 3.7.0
+zope.copypastemove = 3.7.0
+SQLAlchemy = 1.2.8
+ipaddress = 1.0.22
+enum34 = 1.1.6
+cffi = 1.11.5
+asn1crypto = 0.24.0
+cachetools = 2.1.0
+zope.componentvocabulary = 1.0.1
+z3c.formwidget.query = 0.11
+plone.scale = 1.3.5
+Products.SecureMailHost = 1.1.2
+Products.contentmigration = 2.1.11
+feedparser = 5.0.1
+zope.cachedescriptors = 3.5.1
+plone.stringinterp = 1.0.13
+plone.app.imaging = 1.0.11
+zope.app.content = 3.5.1
+plone.outputfilters = 1.15
+Markdown = 2.0.3
+python_gettext = 1.0
+Products.ZopeVersionControl = 1.1.3
+zope.copy = 3.5.0
+zope.app.form = 4.0.2
+Products.ATReferenceBrowserWidget = 3.0
+zc.relation = 1.0
+z3c.objpath = 1.1
+zope.app.intid = 3.7.1
+plone.formwidget.autocomplete = 1.2.8
+pexpect = 4.6.0
+pathlib2 = 2.3.2
+backports.shutil_get_terminal_size = 1.0.0
+Pygments = 1.6
+prompt_toolkit = 1.0.15
+traitlets = 4.3.2
+simplegeneric = 0.8.1
+pickleshare = 0.7.4
+repoze.catalog = 0.8.3
+node.ext.zodb = 1.0.1
+rwproperty = 1.0
+five.intid = 1.0.3
+zope.intid = 3.7.2
+experimental.cssselect = 0.3
+python_openid = 2.2.5
+pycparser = 2.18
+ptyprocess = 0.6.0
+scandir = 1.7
+wcwidth = 0.1.7
+ipython_genutils = 0.2.0
+zope.index = 3.6.4
+node = 0.9.18.1
+zope.keyreference = 3.6.4
+plumber = 1.5
+odict = 1.6.2
+coverage = 3.7
