updated versions to pass tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -168,7 +168,7 @@ collective.polls = 1.6.2.upcnet
 Products.windowZ = 1.5
 Products.Collage = 1.4.0
 Products.PloneFormGen = 1.7.17
-#plone.app.multilingual = 2.0.5_upcnet
+plone.app.multilingual = 2.0.5_upcnet
 
 collective.z3cform.datagridfield = 1.1
 plone.app.registry = 1.2.4
