--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = http://dist.plone.org/release/4.3.7/versions.cfg
+extends = https://dist.plone.org/release/4.3.7/versions.cfg
 show-picked-versions = true
 extensions =
     mr.developer
@@ -473,7 +473,7 @@ z3c.objpath = 1.1
 zope.app.intid = 3.7.1
 plone.formwidget.autocomplete = 1.2.8
 pexpect = 4.6.0
-pathlib2 = 2.3.2
+pathlib2 = 2.3.3
 backports.shutil_get_terminal_size = 1.0.0
 Pygments = 1.6
 prompt_toolkit = 1.0.15
