--- a/buildout.cfg
+++ b/buildout.cfg
@@ -81,6 +81,8 @@ eggs = i18ndude
 [versions]
 mr.developer = 1.38
 pep517=0.9.1
+typing = 3.7.4.3
+typing_extensions = 3.7.4.3
 
 AccessControl = 3.0.11
 Acquisition = 2.13.9
