--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,8 @@ parts =
     robot
 develop = .
 
-find-links = http://pypi.upc.edu/links
+find-links =
+    https://pypi.upc.edu/links
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -79,11 +80,6 @@ eggs = i18ndude
 
 
 [versions]
-mr.developer = 1.38
-pep517=0.9.1
-typing = 3.7.4.3
-typing_extensions = 3.7.4.3
-
 AccessControl = 3.0.11
 Acquisition = 2.13.9
 DateTime = 3.0.3
@@ -265,12 +261,14 @@ mailinglogger = 3.7.0
 martian = 0.14
 mechanize = 0.2.5
 more-itertools = 8.0.1
+mr.developer = 1.38
 node = 0.9.18.1
 node.ext.zodb = 1.0.1
 norecaptcha = 0.3.0
 oauth2client = 4.1.2
 odict = 1.6.2
 pathlib2 = 2.3.3
+pep517=0.9.1
 pexpect = 4.6.0
 pfg.drafts = 1.1.2
 pickleshare = 0.7.4
@@ -301,7 +299,7 @@ plone.app.layout = 2.3.13
 plone.app.linkintegrity = 1.5.6
 plone.app.locales = 4.3.9
 plone.app.lockingbehavior = 1.0.1
-plone.app.multilingual = 2.0.5_upcnet
+plone.app.multilingual = 2.0.5-upcnet
 plone.app.openid = 2.0.4
 plone.app.portlets = 2.5.4
 plone.app.querystring = 1.2.7
@@ -380,7 +378,7 @@ plumber = 1.5
 prompt_toolkit = 1.0.15
 ptyprocess = 0.6.0
 pyOpenSSL = 18.0.0
-pyScss = 1.2.1
+pyScss = 1.3.7
 pyasn1 = 0.4.3
 pyasn1_modules = 0.2.2
 pycparser = 2.18
@@ -412,6 +410,8 @@ tempstorage = 2.12.2
 traitlets = 4.3.2
 transaction = 1.6.0
 transmogrify.dexterity = 1.6.3
+typing = 3.7.4.3
+typing-extensions = 3.7.4.3
 upc.genweb.newsletter = 2.9
 upc.genweb.soa = 1.5
 upcnet.cas = 1.6
