--- a/buildout.cfg
+++ b/buildout.cfg
@@ -78,8 +78,10 @@ eggs = zest.releaser
 recipe = zc.recipe.egg
 eggs = i18ndude
 
-
 [versions]
+mr.developer = 1.38
+setuptools = 
+
 AccessControl = 3.0.11
 Acquisition = 2.13.9
 DateTime = 3.0.3
@@ -261,14 +263,13 @@ mailinglogger = 3.7.0
 martian = 0.14
 mechanize = 0.2.5
 more-itertools = 8.0.1
-mr.developer = 1.38
 node = 0.9.18.1
 node.ext.zodb = 1.0.1
 norecaptcha = 0.3.0
 oauth2client = 4.1.2
 odict = 1.6.2
 pathlib2 = 2.3.3
-pep517=0.9.1
+pep517 = 0.9.1
 pexpect = 4.6.0
 pfg.drafts = 1.1.2
 pickleshare = 0.7.4
@@ -379,7 +380,7 @@ prompt_toolkit = 1.0.15
 ptyprocess = 0.6.0
 pyOpenSSL = 18.0.0
 pyScss = 1.3.7
-pyasn1 = 0.4.3
+pyasn1 = 0.4.6
 pyasn1_modules = 0.2.2
 pycparser = 2.18
 pyquery = 1.4.0
@@ -418,10 +419,12 @@ upcnet.cas = 1.6
 upcnet.stats = 1.2
 uritemplate = 3.0.0
 urllib3 = 1.23
+watchdog = 0.10.0
 wcwidth = 0.1.7
 wicked = 1.1.12
 wildcard.foldercontents = 1.2.7
 wstools = 0.4.3
+wxPython = 4.0.7.post1
 z3c.autoinclude = 0.3.5
 z3c.caching = 2.0a1
 z3c.form = 3.2.4
