--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,8 +15,7 @@ parts =
     robot
 develop = .
 
-find-links =
-    https://pypi.upc.edu/links
+find-links = https://pypi.upc.edu/links
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -269,7 +268,6 @@ norecaptcha = 0.3.0
 oauth2client = 4.1.2
 odict = 1.6.2
 pathlib2 = 2.3.3
-pep517 = 0.9.1
 pexpect = 4.6.0
 pfg.drafts = 1.1.2
 pickleshare = 0.7.4
@@ -411,8 +409,6 @@ tempstorage = 2.12.2
 traitlets = 4.3.2
 transaction = 1.6.0
 transmogrify.dexterity = 1.6.3
-typing = 3.7.4.3
-typing-extensions = 3.7.4.3
 upc.genweb.newsletter = 2.9
 upc.genweb.soa = 1.5
 upcnet.cas = 1.6
@@ -421,10 +417,10 @@ uritemplate = 3.0.0
 urllib3 = 1.23
 watchdog = 0.10.0
 wcwidth = 0.1.7
+#wxPython = 4.0.7.post2
 wicked = 1.1.12
 wildcard.foldercontents = 1.2.7
 wstools = 0.4.3
-wxPython = 4.0.7.post1
 z3c.autoinclude = 0.3.5
 z3c.caching = 2.0a1
 z3c.form = 3.2.4
