travis is green now

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -268,6 +268,7 @@ norecaptcha = 0.3.0
 oauth2client = 4.1.2
 odict = 1.6.2
 pathlib2 = 2.3.3
+pep517 = 0.9.1
 pexpect = 4.6.0
 pfg.drafts = 1.1.2
 pickleshare = 0.7.4
@@ -409,6 +410,8 @@ tempstorage = 2.12.2
 traitlets = 4.3.2
 transaction = 1.6.0
 transmogrify.dexterity = 1.6.3
+typing = 3.7.4.3
+typing-extensions = 3.7.4.3
 upc.genweb.newsletter = 2.9
 upc.genweb.soa = 1.5
 upcnet.cas = 1.6
