--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = https://dist.plone.org/release/4.3.7/versions.cfg
+extends = https://dist.plone.org/release/6.0.6/versions.cfg
 show-picked-versions = true
 extensions =
     mr.developer
@@ -24,13 +24,12 @@ http-address = 8080
 environment-vars =
     zope_i18n_compile_mo_files true
 
-# Added required base eggs to execute tests
 eggs =
     Plone
-    Pillow
-    plone.app.multilingual
     plone.app.contenttypes
-    genweb.upc
+    plone.app.dexterity
+    plone.app.registry
+    plone.api
     genweb.organs
 
 
@@ -79,7 +78,7 @@ eggs = i18ndude
 
 [versions]
 mr.developer = 1.38
-setuptools = 
+setuptools =
 
 AccessControl = 3.0.11
 Acquisition = 2.13.9
