--- a/buildout.cfg
+++ b/buildout.cfg
@@ -434,7 +434,7 @@ zc.relation = 1.0
 zdaemon = 2.0.7
 zipp = 0.6.0
 zope.annotation = 3.5.0
-zope.app.container = 3.9.2
+zope.container = 3.9.2
 zope.app.content = 3.5.1
 zope.app.form = 4.0.2
 zope.app.intid = 3.7.1
