[FIX] Change behaviors

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -178,7 +178,7 @@ certifi = 2018.4.16
 cffi = 1.11.5
 chardet = 3.0.4
 collective.collage.ploneformgen = 1.0a1
-collective.dexteritytextindexer = 2.2.1
+# collective.dexteritytextindexer = 2.2.1
 collective.elephantvocabulary = 0.2.5
 collective.js.jqueryui = 1.10.3
 collective.jsonify = 1.3
