--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,6 +32,7 @@ eggs =
     plone.app.contenttypes
     genweb.upc
     genweb.organs
+    PyPDF2==1.26.0
 
 
 [code-analysis]
@@ -503,3 +504,6 @@ zope.testbrowser = 3.11.1
 zope.testing = 3.9.7
 zope.traversing = 3.13.2
 zope.viewlet = 3.7.2
+PyPDF2 = 1.26.0
+markupsafe = 1.1.1
+
